--- a/index.html
+++ b/index.html
@@ -47,10 +47,17 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
-<h4>This is the workshop template. Delete these lines and use it to customize your own website.
-If you are running a self-organized workshop or have not put in a workshop request yet, please also fill in 
-<a href="{{site.amy_site}}/submit">this workshop request form</a> to let us know about your workshop
-and our administrator may contact you if we need any extra information.</h4>
+<h2>Registration</h2>
+
+<p>
+  Space is limited to 24 participants for this workshop and registration is required. A fee of $46.00 will 
+  be charged and lunch will be provided both days. 
+  Please register in UF's conference system here:
+</p>
+
+<p>
+  We expect to open registration for this workshop on Wednesday, 8/2/2017.
+</p>
 
 <h2 id="general">General Information</h2>
 
