--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   Please register in UF's conference system here:
 </p>
 
-<p>
-  We expect to open registration for this workshop on Wednesday, 8/2/2017.
-</p>
+    <p><strong>
+      We expect to open registration for this workshop on Wednesday, 8/2/2017.
+      <!-- <a href="">Register Now</a> -->
+      <!-- Registration is now full -->
+    </strong></p>
 
 <h2 id="general">General Information</h2>
 
